<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DUT_ALM" Id="{6758646b-b6b7-4d66-b478-11801b6873dc}">
    <Declaration><![CDATA[TYPE DUT_ALM :
STRUCT
	GeneralFailure: BOOL;
	TimeFailure: BOOL;
	InAlarm: BOOL := TimeFailure OR GeneralFailure;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>